--- a/src/java/1.basic/4.collection.md
+++ b/src/java/1.basic/4.collection.md
@@ -19,3 +19,30 @@ while(it.hasNext()){
     }
 }
 ```
+
+## 2.ArrayList和LinkedList
+**ArrayList**：基于动态数组的数据结构，在内存中地址连续，可以看做一个能够自动增长容量的数组。
+- 优势：由于地址连续，查询操作效率比较高
+- 缺点：插入和删除操作效率较低，因为插入和删除要将后方的元素全部移动
+
+**LinkedList**：基于双向链表的数据结构，地址是任意的，不需要等待开辟一个连续的地址
+- 优势：插入和删除操作效率较高，只需要移动指针即可
+- 缺点：由于地址不连续，还需要通过指针查询下一个，查询性能较低
+
+## 3.HashMap和HashTable
+- **父类**：
+HashMap继承自AbstractMap、HashTable继承自Dictionary。
+两者均实现了Map、Cloneable、Serializable
+- **对外提供接口**：
+HashTable多提供了一个elments()方法，这个方法是继承自Dictionary抽象类的，主要功能是返回这个Hashtable中的value枚举。
+- **线程安全**：
+HashMap是线程不安全的，Hashtable是线程安全的，他的每个方法上面都有synchronized关键词。
+但是由于有同步锁，导致Hashtable的性能比较差，在多线程的情况下官方推荐使用ConcurrentHashMap来解决线程安全的问题，其使用分段锁来实现线程安全，所以性能更强，具体参见线程安全一节。
+
+## 4.HashMap详解
+### 4.1 数据结构
+底层使用散列表数据结构，即数组+链表或红黑树。
+jdk1.7之前是数组+链表
+jdk1.8之后是数组+链表或红黑树，链表长度大于8且数组长度大于64则会从链表转化为红黑树
+
+
