--- a/src/java/1.basic/3.oop.md
+++ b/src/java/1.basic/3.oop.md
@@ -8,6 +8,8 @@ tag:
 
 # JAVA 基础 - 面向对象
 
+[[toc]]
+
 ## 1.面向对象的四个特点
 - **抽象**：抽象是将一类对象的共有特征总结出一个抽象类，抽象类只关心对象有哪些属性和行为，不关注行为细节
 - **封装**：把对象里的某些属性私有化，只提供可以被外部访问的属性和方法。
