--- a/src/java/1.basic/4.collection.md
+++ b/src/java/1.basic/4.collection.md
@@ -138,3 +138,8 @@ final V putVal(int hash, K key, V value, boolean onlyIfAbsent,
   - 2.1、如果Node节点的next为null，也就是没有hash冲突的节点，使用 `(newCap - 1) & hash`计算出新位置即可
   - 2.2、如果节点下方为红黑树，将红黑树添加到对应位置
   - 2.3、如果节点下方为链表，需要遍历链表，可能需要拆分链表，分别放到新位置。
+
+### 4.5 加载因子变大或变小的问题
+加载因子的默认值0.75是基于内存和访问效率上折中取的。
+当加载因子变大的时候，扩容更不频繁，数组中的数据密度越来越大，放生哈希冲突的概率越高，链表或红黑树的大小也会变大，导致查询和插入的性能变低。
+当加载因子变小的时候，扩容更频繁，导致需要频繁的创建新的数组，内存压力更大。
