--- a/src/java/2.JUC/2.thread.md
+++ b/src/java/2.JUC/2.thread.md
@@ -12,7 +12,7 @@ tag:
 [[toc]]
 
 
-## 2.创建线程的几种方式
+## 1.创建线程的几种方式
 ### 2.1 继承Thread类
 ```java
 public class MyThread extends Thread{
@@ -116,3 +116,24 @@ public void testExecutors(){
 当前线程是：pool-1-thread-3
 ```
 可以发现FixedThreadPool线程池最大线程数为3，提交了四个Runnable，复用了一个线程，具体可以看线程池一节。
+
+## 2.线程的状态及状态之间的变化
+
+线程的状态可以参考JDK中的`Thread`类中的枚举`State`：
+- NEW：新建状态
+- RUNNABLE：可运行状态
+- BLOCKED：阻塞状态
+- WAITING：等待状态
+- TIME_WAITING：时间等待状态
+- TERMINATED：终结状态
+状态间的变化如下图所示：
+
+![线程状态间的变化](./image/thread-state.png)
+
+1、创建线程对象（new Thread）是新建状态（NEW）；
+2、调用Thread.start()方法转变为可执行状态（RUNNABLE）；
+3、不论线程是否抢到CPU的执行权，都还是可执行状态（RUNNABLE）；
+3.1、如果无法获得锁，则进入阻塞状态（BLOCKED），重新获得锁之后变回可执行状态（RUNNABLE）；
+3.2、如果线程调用了wait()方法进入了等待状态（WAITING），其他线程使用notify()唤醒他之后变回可执行状态（RUNNABLE）；
+3.3、如果线程调用了sleep()方法进入了时间等待状态（TIME_WAITING），到时间后变回可执行状态（RUNNABLE）；
+4、线程抢到了CPU的执行权，并且执行完成，是终结状态（TERMINATED）；
