commit-JUC-lock

--- a/src/java/1.basic/4.collection.md
+++ b/src/java/1.basic/4.collection.md
@@ -119,25 +119,26 @@ final V putVal(int hash, K key, V value, boolean onlyIfAbsent,
 
 ![hashMap.put()的流程图](./image/hashmap-put.png)
 
-- 1、首先判断数组`table`是否为空，如果为空则使用`resize()`方法初始化长度为16的数组；
-- 2、不为空则证明不是第一次put，则根据key计算hash值，即hash(key)为table数组的索引；
-- 3、判断`table[hash(key)]`是否为null，如果为null直接把Node节点插入即可；
-- 4、如果`table[hash(key)]`不为null，则证明已经有Node节点，此时需要判断各种情况：
-  - 4.1、判断此位置的Node节点的key值与传入的key值是否一致，如果是的话直接覆盖value至此Node；（put了相同key不同value的情况，覆盖value）
-  - 4.2、如果key不一致则证明发生了哈希冲突，再判断`table[hash(key)]`此位置是否为红黑树，如果是的话则直接使用`TreeNode.putTreeVal`方法放入值；
-  - 4.3、如果不为红黑树则证明`table[hash(key)]`此位置为链表，遍历链表判断key是否存在，如果存在直接覆盖value；（在hash冲突的前提下put了相同key不同value的情况，覆盖value）
-  - 4.4、如果不存在，则证明此key没有插入过，在链表尾部插入Node节点即可，插入完成后看链表长度是否大于8，如果大于8则把链表转换为红黑树；
-- 5、插入成功后，判断table[]中的键值对Node数量size是否大于threshold扩容阈值，如果超过了就调用`resize()`进行扩容;
+> 1、首先判断数组`table`是否为空，如果为空则使用`resize()`方法初始化长度为16的数组；
+> 2、不为空则证明不是第一次put，则根据key计算hash值，即hash(key)为table数组的索引；
+> 3、判断`table[hash(key)]`是否为null，如果为null直接把Node节点插入即可；
+> 4、如果`table[hash(key)]`不为null，则证明已经有Node节点，此时需要判断各种情况：
+>> 4.1、判断此位置的Node节点的key值与传入的key值是否一致，如果是的话直接覆盖value至此Node；（put了相同key不同value的情况，覆盖value）
+>> 4.2、如果key不一致则证明发生了哈希冲突，再判断`table[hash(key)]`此位置是否为红黑树，如果是的话则直接使用`TreeNode.putTreeVal`方法放入值；
+>> 4.3、如果不为红黑树则证明`table[hash(key)]`此位置为链表，遍历链表判断key是否存在，如果存在直接覆盖value；（在hash冲突的前提下put了相同key不同value的情况，覆盖value）
+>> 4.4、如果不存在，则证明此key没有插入过，在链表尾部插入Node节点即可，插入完成后看链表长度是否大于8，如果大于8则把链表转换为红黑树；
+>
+> 5、插入成功后，判断table[]中的键值对Node数量size是否大于threshold扩容阈值，如果超过了就调用`resize()`进行扩容;
 
 ### 4.4 resize()扩容方法
 
 ![hashMap.put()的流程图](./image/hashmap-resize.png)
 
-- 1、初始化的时候调用`resize()`时旧容量=0，设置容量为16、扩容阈值为12新建数组。
-- 2、如果旧容量大于0则证明不是初始化，需要扩容，设置新容量为旧容量的两倍，按照新容量创建新的数组。
-  - 2.1、如果Node节点的next为null，也就是没有hash冲突的节点，使用 `(newCap - 1) & hash`计算出新位置即可
-  - 2.2、如果节点下方为红黑树，将红黑树添加到对应位置
-  - 2.3、如果节点下方为链表，需要遍历链表，可能需要拆分链表，分别放到新位置。
+> 1、初始化的时候调用`resize()`时旧容量=0，设置容量为16、扩容阈值为12新建数组。
+> 2、如果旧容量大于0则证明不是初始化，需要扩容，设置新容量为旧容量的两倍，按照新容量创建新的数组。
+>> 2.1、如果Node节点的next为null，也就是没有hash冲突的节点，使用 `(newCap - 1) & hash`计算出新位置即可
+>> 2.2、如果节点下方为红黑树，将红黑树添加到对应位置
+>> 2.3、如果节点下方为链表，需要遍历链表，可能需要拆分链表，分别放到新位置。
 
 ### 4.5 加载因子变大或变小的问题
 加载因子的默认值0.75是基于内存和访问效率上折中取的。
