--- a/src/java/2.JUC/3.lock.md
+++ b/src/java/2.JUC/3.lock.md
@@ -277,8 +277,9 @@ for (int i = 0 ; i < 10 ; i++){
 
 ## 10.ConcurrentHashMap原理
 ConcurrentHashMap是HashMap的线程安全版本，底层逻辑与HashMap一样，都是采用数组+链表+红黑树来实现逻辑的，区别则是采用CAS操作与Synchronized关键字来实现线程安全的。
-CAS操作确保数组节点的添加
-Synchronized锁定链表或红黑树的首节点，只要不发生哈希冲突，就没有并发的问题
+
+- CAS操作确保数组节点的添加
+- Synchronized锁定链表或红黑树的首节点，只要不发生哈希冲突，就没有并发的问题
 
 ![](./image/concurrentHashMap.png)
 
