--- a/src/java/4.spring/2.springBoot.md
+++ b/src/java/4.spring/2.springBoot.md
@@ -1,10 +1,10 @@
 ---
-date: 2022-06-05
+date: 2022-06-08
 category:
   - JAVA
 tag:
-  - JVM
-  - 垃圾回收
+  - Spring
+  - 框架
 ---
 
 # Spring - SpringBoot
