--- a/src/mysql/3.transaction.md
+++ b/src/mysql/3.transaction.md
@@ -29,7 +29,7 @@ tag:
 ### 2.2 不可重复读
 一个事务先后读取同一条数据，两次获取的数据内容不同
 
-![](./image/un-repeat%3Dread.png)
+![](./image/un-repeat-read.png)
 
 ### 2.3 幻读
 一个事务查询某个数据时显示该行不存在，将其插入时又发现这行已存在，仿佛出现了幻影
