--- a/src/java/4.spring/2.springBoot.md
+++ b/src/java/4.spring/2.springBoot.md
@@ -9,3 +9,67 @@ tag:
 
 # Spring - SpringBoot
 
+[[toc]]
+
+## 1.SpringBoot的自动装配
+
+在SpringBoot项目的引导类上会有一个注解@SpringBootApplication，这个注解是由三个注解组成：
+- @SpringBootConfiguration：实际上就是一个@Configuration，证明其是一个配置类
+- @EnableAutoConfiguration：自动装配的核心类
+- @ComponentScan：组件扫描的路径
+
+接下来继续查看@EnableAutoConfiguration注解，这个注解核心是由@Import注解构成：
+- @AutoConfigurationPackage
+- @Import(AutoConfigurationImportSelector.class)
+
+可以看出，通过Import注解导入了自动配置选择器，这个AutoConfigurationImportSelector类主要是读取了META-INF/spring.factories文件，文件部分内容如下：
+
+```
+# Auto Configure
+org.springframework.boot.autoconfigure.EnableAutoConfiguration=\
+org.springframework.boot.autoconfigure.admin.SpringApplicationAdminJmxAutoConfiguration,\
+org.springframework.boot.autoconfigure.aop.AopAutoConfiguration,\
+org.springframework.boot.autoconfigure.amqp.RabbitAutoConfiguration,\
+org.springframework.boot.autoconfigure.batch.BatchAutoConfiguration,\
+org.springframework.boot.autoconfigure.cache.CacheAutoConfiguration,\
+org.springframework.boot.autoconfigure.cassandra.CassandraAutoConfiguration,\
+......
+org.springframework.boot.autoconfigure.data.redis.RedisAutoConfiguration,\
+......
+```
+
+此文件中配置了一些类的全类名，这些类就是实际上的自动装配类了，以Redis的自动装配类RedisAutoConfiguration为例，这是一个Configuration配置类：
+
+```java
+@Configuration(proxyBeanMethods = false)
+@ConditionalOnClass(RedisOperations.class) //此处判断是否有对应的class文件，如果有才加载此类
+@EnableConfigurationProperties(RedisProperties.class)
+@Import({ LettuceConnectionConfiguration.class, JedisConnectionConfiguration.class })
+public class RedisAutoConfiguration {
+
+   @Bean
+   @ConditionalOnMissingBean(name = "redisTemplate") //此处判断IOC中是否有redisTemplate的Bean，如果没有才注册
+   public RedisTemplate<Object, Object> redisTemplate(RedisConnectionFactory redisConnectionFactory)
+         throws UnknownHostException {
+      RedisTemplate<Object, Object> template = new RedisTemplate<>();
+      template.setConnectionFactory(redisConnectionFactory);
+      return template;
+   }
+
+   @Bean
+   @ConditionalOnMissingBean
+   public StringRedisTemplate stringRedisTemplate(RedisConnectionFactory redisConnectionFactory)
+         throws UnknownHostException {
+      StringRedisTemplate template = new StringRedisTemplate();
+      template.setConnectionFactory(redisConnectionFactory);
+      return template;
+   }
+}
+```
+
+
+首先通过@ConditionalOnClass(RedisOperations.class)注解判断ClassPath下是否存在RedisOperations类，如果有才会执行整个class。
+
+其次通过@ConditionalOnMissingBean(name = "redisTemplate")注解判断IOC中是否有redisTemplate的Bean，如果没有才通过@Bean注解return一个redisTemplate进入IOC中。
+
+所以我们可以在代码中，不用配置直接@Autowire RedisTemplate即可使用，当我们自己配置了redisTemplate的Bean之后，自动状态将不再生效
