--- a/src/java/4.spring/2.springBoot.md
+++ b/src/java/4.spring/2.springBoot.md
@@ -18,7 +18,7 @@ tag:
 - @EnableAutoConfiguration：自动装配的核心类
 - @ComponentScan：组件扫描的路径
 
-接下来继续查看@EnableAutoConfiguration注解，这个注解核心是由@Import注解构成：
+查看@EnableAutoConfiguration注解，这个注解核心是由@Import注解构成：
 - @AutoConfigurationPackage
 - @Import(AutoConfigurationImportSelector.class)
 
