--- a/src/mysql/1.basic.md
+++ b/src/mysql/1.basic.md
@@ -135,3 +135,22 @@ aID　　　　　aNum　　　　　bID　　　　　bName
 可以通过一些数据库中间件解决，或自己定义中间层，分库分表的中间件：
 sharding-sphere
 mycat
+
+
+## 5.binlog、undo log、redo log区别
+### 5.1 binlog
+
+binlog是一种服务层的二进制日志，用来记录数据库的写入操作，主要是用场景为：主从复制
+
+日志格式有三种：
+1、statement：记录SQL语句的原文，可能会导致主从不一致，例如set update_time = now()
+2、row：记录SQL涉及到每行数据的修改，缺点是可能产生大量日志，5.7.7以后的默认模式
+3、mixed：上述两种方案的结合模式，MYSQL会判断这条SQL语句是否会引起数据不一致，如果是就用row模式，否则就用statement模式
+
+### 5.2 redo log
+redo log是一种重做日志，记录了数据页的物理修改，主要场景是：宕机恢复数据
+为了提高性能，mysql使用了buffer pool，查询数据时，先从buffer pool查，如果不存在，就会从磁盘读取数据页放到buffer pool，更新数据同样，直接更新buffer pool中的数据页，此时内存中的数据页和磁盘上的就不一致了，出现了脏页，mysql会在合适的时机将脏页刷到磁盘，但是万一脏页还没刷到磁盘，mysql宕机，此时buffer pool中还没来得及落盘的数据就丢失了，所以在更新buffer pool之前就会把 “事务在某个数据页上做了什么修改”记录到redo log，这就是WAL(Write Ahead Log)。也就是说，redo log记录的比buffer pool、磁盘都要快
+
+### 5.3 undo log
+事务修改数据之前会记录undo log并且持久化，通过回滚事务指针形成了一个链表，主要场景为：事务回滚
+undolog中主要是记录了逆向操作的SQL，并且每一条undo log都记录了事务id
